--- a/MovieReviewApp/src/main/resources/templates/movie/form.html
+++ b/MovieReviewApp/src/main/resources/templates/movie/form.html
@@ -31,6 +31,7 @@
 						<label><input type="radio" name="genre" th:field="*{genre}" th:value="戦争">戦争</label>
 						<label><input type="radio" name="genre" th:field="*{genre}" th:value="ファンタジー">ファンタジー</label>
 						<label><input type="radio" name="genre" th:field="*{genre}" th:value="アニメ">アニメ</label>
+						<label><input type="radio" name="genre" th:field="*{genre}" th:value="SF">SF</label>
 						<label><input type="radio" name="genre" th:field="*{genre}" th:value="ほのぼの">ほのぼの</label>
 						<label><input type="radio" name="genre" th:field="*{genre}" th:value="その他">その他</label>
 						
