--- a/MovieReviewApp/src/main/resources/templates/movie/detail.html
+++ b/MovieReviewApp/src/main/resources/templates/movie/detail.html
@@ -8,37 +8,37 @@
 			<img th:if="${movie.image}" th:src="@{${movie.image}}">
 		</div>
 		<div class="detail-cell name">
-			<th>タイトル</th>
+			<th>タイトル　>　</th>
 			<td th:text="${movie.title}"></td>
 		</div>
 		<div class="detail-cell genre">
-			<th>ジャンル</th>
+			<th>ジャンル　>　</th>
 			<td th:text="${movie.genre}"></td>
 		</div>
 		<div class="detail-cell releaseYear">
-			<th>公開年</th>
-			<td th:text="${movie.releaseYear}"></td>
+			<th>公開年　>　</th>
+			<td th:text="${movie.releaseYear}+ '年'"></td>
 		</div>
 		<div class="detail-cell rating">
-			<th>オススメ度</th>
+			<th>オススメ度　>　</th>
 			<td><span th:each="i : ${#numbers.sequence(1, 5)}" 
 				th:text="${i <= movie.rating ? '★' : '☆'}"></span></td>
 		</div>
 		<div class="detail-cell summary">
-			<th>あらすじ</th>
+			<th><span class="subTitle">あらすじ</span></th>
 			<td th:text="${movie.summary}"></td>
 		</div>
 		<div class="detail-cell review">
-			<th>感想</th>
+			<th><span class="subTitle">感想</span></th>
 			<td th:text="${movie.review}"></td>
 		</div>
 		<div class="detail-cell createdAt">
-			<th>登録日時</th>
+			<th>登録日時　>　</th>
 			<td th:text="${movie.createdAt.format(
 				           T(java.time.format.DateTimeFormatter).ofPattern('yyyy / MM / dd'))}"></td>
 		</div>
 		<div class="detail-cell updatedAt">
-			<th>更新日時</th>
+			<th>更新日時　>　</th>
 			<td th:text="${movie.updatedAt.format(
 				           T(java.time.format.DateTimeFormatter).ofPattern('yyyy / MM / dd'))}"></td>
 		</div>
