--- a/MovieReviewApp/src/main/resources/templates/common.html
+++ b/MovieReviewApp/src/main/resources/templates/common.html
@@ -20,7 +20,7 @@
 <body>
 	<!--hedder-->
 	<div th:fragment="header" class="header">
-		<h1 class="main_title ft-nn bold"><a th:href="@{/}">Movie Review Collection</a></h1>
+		<h1 class="main_title ft-nn bold"><a th:href="@{/}">My Movie Review</a></h1>
 	</div>
 	
 	<!--footer-->
