--- a/MovieReviewApp/src/main/resources/templates/menu.html
+++ b/MovieReviewApp/src/main/resources/templates/menu.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head th:replace="common :: common-head('メニュー')"></head>
-<body>
+<body class="fade-container">
 	<header th:replace="common :: header"></header>
 	<section class="section">
 		<h2 class="ft-zm ta-center">メニュー画面</h2>
