--- a/MovieReviewApp/src/main/resources/templates/movie/detail.html
+++ b/MovieReviewApp/src/main/resources/templates/movie/detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="common :: common-head('映画鑑賞記録 詳細')"></head>
-<body>
+<body class="fade-container">
 	<header th:replace="common :: header"></header>
 	<section class="section">
 		<div class="detail-cell image">
