--- a/MovieReviewApp/src/main/resources/templates/movie/form.html
+++ b/MovieReviewApp/src/main/resources/templates/movie/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="common :: common-head('編集画面')"></head>
-<body>
+<body class="fade-container">
 	<header th:replace="common :: header"></header>
 	<section class="section">
 		<!--1 タイトル：登録 or 編集-->
