--- a/MovieReviewApp/src/main/resources/static/css/style.css
+++ b/MovieReviewApp/src/main/resources/static/css/style.css
@@ -34,12 +34,31 @@ br.br30h{
 .ta-center{
 	text-align: center;
 }
+/*  pc/sp切り替え  */
+.sp-hide{
+	display:none;
+}
+.pc-hide{
+	display:block;
+}
+@media screen and (min-width: 421px){
+	.sp-hide{
+		display:block;
+	}
+	.pc-hide{
+		display:none;
+	}
+}
+
 
 html {
     width: 100%;
 }
 body{
 	margin:0 auto;
+}
+body.fade-container {
+	display: none;
 }
 .section {
 	padding: 70px 20px 50px;
@@ -54,6 +73,8 @@ body{
 	background: #fff;
 	padding: 10px;
 	position: fixed;
+	left: 0;
+	top: 0;
 	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1;
 }
@@ -101,7 +122,7 @@ body{
 	display: none;
 	width: 50px;
 	height: 50px;
-	background: #d9213a;
+	background: #f496bf;
 	color: #fff;
 	font-size: 2em;
 	border: none;
@@ -123,7 +144,7 @@ body{
 .mv-under {
     text-align: center;
     line-height: 1;
-    margin: 0 auto 50px;
+    margin: 20px auto 50px;
 }
 
 .wrapper {
@@ -203,7 +224,7 @@ body{
 	padding-right: .5em;
 }
 .wrapper .cell .rating {
-    color: #d9213a;
+    color: #494fa2;
     text-align: right;
 }
 /* 
@@ -218,7 +239,7 @@ body{
 	border-bottom: none;
 	margin-bottom: 25px;
 	padding: 10px;
-	background-image: linear-gradient(90deg, rgba(85, 85, 85, 1), rgba(0, 0, 0, 1));
+	background-image: linear-gradient(180deg, rgba(85, 85, 85, 1), rgba(0, 0, 0, 1));
 }
 .detail-cell.image img {
 	display: block;
@@ -266,7 +287,7 @@ body{
 
 .transitions div.delete{
 	background-image:url('../images/delete.svg');
-	background-color: #597BAB;
+	background-color: #494fa2;
 }
 .transitions div.delete form input {
 	width: 100%;
@@ -355,7 +376,7 @@ body{
     padding: 10px 30px;
     border: none;
     border-radius: 5px;
-    background: #c13240;
+    background: #83b3e0;
     color: #fff;
     font-size: 1.2em;
     margin: 10px auto 0px;
@@ -368,9 +389,35 @@ body{
 
 
 @media screen and (min-width: 421px){
+	/* 
+	   共通 
+	*/
+	html{
+		background:#ffe9c7;
+	}
 	body{
+		background:#fff;
+		
 		width:75vw;
 		min-width:300px;
 		max-width:900px;
+	}
+	
+	/* 
+	  detailページ
+	*/
+	.wrapper .cell {
+	    width: calc(93% / 3);
+	    margin-bottom: 10px;
+	}
+	
+	/* 
+	  新規登録・編集ページ
+	*/
+	table.form-wrapper {
+	    width: 95%;
+	}
+	.transitions {
+	    width: 60%;
 	}
 }
