--- a/MovieReviewApp/src/main/resources/templates/common.html
+++ b/MovieReviewApp/src/main/resources/templates/common.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--ファビコン-->
-	<!--<link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">-->
+	<link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
 	<title th:text="${title}">Default Title</title>
 	<!--共通css-->
 	<link th:href="@{/css/style.css}" rel="stylesheet" type="text/css">
