--- a/MovieReviewApp/src/main/resources/templates/movie/list.html
+++ b/MovieReviewApp/src/main/resources/templates/movie/list.html
@@ -14,7 +14,7 @@
 			<img class="pc-hide" th:src="@{/images/mv_sp.png}" alt="top sp画像">
 			<img class="sp-hide" th:src="@{/images/mv_pc.png}" alt="top pc画像">
 		</div>
-		<p class="mv-under ft-zm" id="here">あの日観たシーンを忘れる前に。</p>
+		<p class="mv-under ft-zm" id="here">突然の「オススメの映画は？」に<br class="pc-hide">即レスするための備忘録！</p>
 		
 		<hr>
 		<h2 class="title ft-nn bold">Reviews List</h2>
