--- a/MovieReviewApp/src/main/resources/templates/movie/form.html
+++ b/MovieReviewApp/src/main/resources/templates/movie/form.html
@@ -26,12 +26,13 @@
 					<th>ジャンル</th>
 					<td>
 						<label><input type="radio" name="genre" th:field="*{genre}" th:value="ホラー">ホラー</label>
+						<label><input type="radio" name="genre" th:field="*{genre}" th:value="アクション">アクション</label>
 						<label><input type="radio" name="genre" th:field="*{genre}" th:value="サスペンス">サスペンス</label>
 						<label><input type="radio" name="genre" th:field="*{genre}" th:value="ミュージカル">ミュージカル</label>
 						<label><input type="radio" name="genre" th:field="*{genre}" th:value="戦争">戦争</label>
-						<label><input type="radio" name="genre" th:field="*{genre}" th:value="ファンタジー">ファンタジー</label>
+						<label><input type="radio" name="genre" th:field="*{genre}" th:value="SF・ファンタジー">SF / ファンタジー</label>
 						<label><input type="radio" name="genre" th:field="*{genre}" th:value="アニメ">アニメ</label>
-						<label><input type="radio" name="genre" th:field="*{genre}" th:value="SF">SF</label>
+						<label><input type="radio" name="genre" th:field="*{genre}" th:value="コメディ">コメディ</label>
 						<label><input type="radio" name="genre" th:field="*{genre}" th:value="ほのぼの">ほのぼの</label>
 						<label><input type="radio" name="genre" th:field="*{genre}" th:value="その他">その他</label>
 						
